test/corpus/quilt.txt
================================================================================
Quilt Expression
================================================================================
1 + 2
--------------------------------------------------------------------------------

(module
  (binary_operator
    (integer)
    (integer)))

================================================================================
Quilt Statement
================================================================================
x = y
--------------------------------------------------------------------------------

(module
  (assignment
    (identifier)
    (identifier)))

